# osc-genai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: fetch_midm_database.py  mock_ableton.py
src/osc_genai/: ableton.py  cli.py  cli_spec.py  generate.py  inference.py  main.py
src/osc_genai/audio/: __init__.py  capture.py  segment.py  stream.py  track.py  yin.py
src/osc_genai/core/: __init__.py  event.py  note.py  vocab.py
src/osc_genai/data/: __init__.py  drums.py  midi.py  pairs.py  record.py  snapshot.py
src/osc_genai/gui/: __init__.py  app.py  forms.py  invoke.py  presets.py  workers.py
src/osc_genai/model/: __init__.py  checkpoint.py  factored.py
src/osc_genai/osc/: ableton.py  listen.py
src/osc_genai/realtime/: clock.py  duet.py  fake_human.py  live.py  partner.py  play.py
src/osc_genai/training/: metrics.py  train.py
tests/: test_ableton_mock.py  test_audio_partner.py  test_cli_spec.py  test_conditional.py  test_data.py  test_device.py  test_drums.py  test_duet.py  test_fake_human.py  test_generation.py  test_gui.py  test_gui_qt.py  test_live.py  test_metrics.py  test_model.py  test_pairs.py  test_record.py  test_repr.py  test_scheduler.py  test_segment.py  test_snapshot.py  test_train.py  test_vocab.py  test_yin.py
