[project]
name = "osc-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Andrea Marino", email = "a.marino@uva.nl" }
]
requires-python = ">=3.10"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.2.6",
    "python-osc>=1.10.2",
    "python-rtmidi>=1.5.8",
    "sounddevice>=0.4.6",
    "torch>=2.12.1",
]

[project.optional-dependencies]
# Ableton Link sync for the realtime commands (--link). Kept optional so the base install
# and tests don't pull in the native aalink build. Install with: uv sync --extra link
link = ["aalink>=0.2.2"]
# Desktop control center (the `control-center` command). Heavy (Qt); kept optional so the base
# install, CI, and tests stay headless. Install with: uv sync --extra gui
gui = ["PySide6>=6.7", "pyqtgraph>=0.13"]

[project.scripts]
demo = "osc_genai:main"
control-center = "osc_genai.gui.app:main"
live = "osc_genai.realtime.live:main"
generate = "osc_genai.inference:main"
train = "osc_genai.training.train:main"
train-conditional = "osc_genai.training.train:conditional_main"
train-paired = "osc_genai.training.train:paired_main"
build-pairs = "osc_genai.data.pairs:main"
play = "osc_genai.realtime.play:main"
duet = "osc_genai.realtime.duet:main"
fake-human = "osc_genai.realtime.fake_human:main"
record = "osc_genai.data.record:main"
audio-devices = "osc_genai.audio.capture:main"
audio-track = "osc_genai.audio.track:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[tool.coverage.run]
source = ["src/osc_genai"]
branch = true

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `ruff format` owns line width; don't double-flag long lines in lint
# (long URLs/strings the formatter can't wrap would otherwise fail CI).
ignore = ["E501"]
